// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_3414to3857 1`] = `
{
  "X": 11559505.426495155,
  "Y": 145168.22515712655,
}
`;

exports[`_3414to4326 1`] = `
{
  "latitude": 1.303955777623504,
  "longitude": 103.84080401483146,
}
`;

exports[`_3857to3414 1`] = `
{
  "X": 28837.8555334731,
  "Y": 31809.17678148796,
}
`;

exports[`_3857to4326 1`] = `
{
  "latitude": 1.3039454000000008,
  "longitude": 103.8408471,
}
`;

exports[`_4326to3414 1`] = `
{
  "X": 28837.8555334731,
  "Y": 31809.17678148787,
}
`;

exports[`_4326to3857 1`] = `
{
  "X": 11559510.222714178,
  "Y": 145167.06962612906,
}
`;
